--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,9 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+
+
     }
 
     buildTypes {
@@ -49,8 +52,12 @@ dependencies {
 
 
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.9.0'
-    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.google.code.gson:gson:2.8.6'
+    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
+
+
 
     def lifecycle_version = "2.3.0"
     def arch_version = "2.1.0"
@@ -77,6 +84,9 @@ dependencies {
     implementation "androidx.room:room-ktx:$room_version"
 
     implementation 'com.squareup.picasso:picasso:2.71828'
+
+
+
 
 
 
